# Scalable-Machine-Learning-Pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: app.py  schemas.py
configs/: default.yaml
dashboard/: app.py
drift/: __init__.py  detector.py
features/: importance.py  pipeline.py  profiler.py
ingestion/: ingest.py  sources.py  validation.py
models/: registry.py
monitoring/: monitor.py
scheduler/: runner.py
tests/: test_api.py  test_drift.py  test_features.py  test_ingestion.py  test_integration.py  test_registry.py  test_training.py
training/: retrain.py  tracker.py  train.py
utils/: config.py  logger.py  validators.py
